fixed footer spacing

--- a/styles.css
+++ b/styles.css
@@ -174,11 +174,11 @@
     /* Contact Section */
     .contact {
         margin: 0 auto;
-        padding: 8rem 2rem;
+        padding: 2rem 4rem;
         background: var(--primary);
         color: var(--light);
-        margin-left: 2rem;
-        margin-right: 2rem;
+      /*  margin-left: 2rem;
+        margin-right: 2rem;*/
         border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
@@ -233,7 +233,13 @@ max-width:605px;
         border-bottom-color: var(--accent);
     }
 
-    /* Form Styles */
+    .contact-footer{
+      margin: 0 auto;
+max-width: 1200px;
+padding-left: 2rem;
+    }
+
+  /* Form Styles
     .contact-form {
         max-width: 500px;
         margin-top: 2rem;
@@ -298,7 +304,7 @@ text-spacing:0.5px;
     .form-submit:hover {
         background: var(--light);
         transform: translateY(-2px);
-    }
+    } */
 
     /* Footer */
     footer {
